Launcher icon added

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="data_discuss"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Data Discuss"
+        android:icon="@mipmap/datadiscuss">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
