--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+
+  flutter_webview_plugin: ^0.3.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
