--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  connectivity: ^0.4.3+2
 
 
   flutter_webview_plugin: ^0.3.5
@@ -50,6 +51,7 @@ flutter:
   #  - images/a_dot_ham.jpeg
   assets:
     - assets/datadiscuss.png
+    - assets/pika.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
